fixed duplication issue on mobile-top-header and back to to button css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -175,7 +175,7 @@ a.category-badge>span.badge:hover {
     width: 42px;
     position: fixed;
     bottom: 150px;
-    right: 10px;
+    right: 2px;
 }
 
 .btt-link,
